// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer should include class name if passed 1`] = `
<div>
  <div
    class="myclass drawer left"
  />
</div>
`;

exports[`Drawer should render a left drawer if left position 1`] = `
<div>
  <div
    class="drawer left"
  />
</div>
`;

exports[`Drawer should render a right drawer by default 1`] = `
<div>
  <div
    class="drawer right"
  />
</div>
`;

exports[`Drawer should render children 1`] = `
<div>
  <div
    class="drawer left"
    data-test="the-data-test-drawer"
  >
    <h4>
      Title
    </h4>
    <img
      src=""
    />
  </div>
</div>
`;
